# FinRoot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HALL_OF_SHAME.md  HANDOFF.md  HIERARCHY.md  HOW_TO_RUN.md  KIMI.md  LICENSE  Makefile  OS_SETUP.md  README.md  agents session  docker-compose.dev.yml  docker-compose.yml  mcp.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json  skills.manifest.json  streamlit_app.py
.claude/: SETTINGS_GUIDE.md
.github/workflows/: ci.yml  docs_sync.yml  evals.yml  perf_regression.yml  security.yml  test.yml
.specify/: steering.md
.specify/memory/: constitution.md
config/: __init__.py  prompts.py  settings.py
data/: digital_twin.db  tax_rules.json
data/gold/: adversarial_questions.json  frb_questions.json
data/samples/: README.md  twin_profiles.json
docs/: DEPLOY.md  JUDGE_QUICKSTART.md  RELEASE_NOTES.md  REPOSITORY_STRUCTURE_AND_CLEANUP_PLAN.md  SCOPE_GUARD.md  SUBMISSION.md  SUBMISSION_MESSAGE.md  conventions.md  interview_runbook.md  runbook.md
evals/: README.md
orchestrator/: ROLE.md
plan/: ARCHITECTURE.md  EXECUTION.md  PRD.md
prompts/: EXAMPLE_FILLED_TASK.md  INDEX.md
results/: metrics.json
schema/: db_struct.sql
scripts/: _render_svg.py  capture_demo.py  capture_screenshots.py  make_submission.sh  publish_github.sh  record_cli_demo.sh  record_hero_cast.sh  render_diagram.sh  run_evals.py  smoke_test.py
src/: README.md
tests/: README.md  conftest.py
work/: REPORT_TEMPLATE.md  TASK_TEMPLATE.md  WORKER_PROMPT.md
(+399 files in other folders)
