[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finroot"
version = "0.1.0"
description = "Sovereign, reasoning-first, auditable AI financial agent (LangChain + LangGraph)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Srujan" }]
dependencies = [
  "langchain>=0.3,<0.4",
  "langgraph>=0.2,<0.3",
  "langchain-core>=0.3,<0.4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "typer>=0.12,<1",
  "rich>=13",
  "numpy>=1.26",
  "scipy>=1.13",
  "python-dateutil>=2.9",
  "streamlit>=1.36",
  "yfinance>=0.2.40",
  "requests>=2.32",
]

[project.optional-dependencies]
vector = ["chromadb>=0.5"]
groq = ["groq>=0.9"]
openai = ["openai>=1.40"]
sentiment = ["transformers>=4.42", "torch>=2.3"]
dev = ["pytest>=8.2", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
finroot = "src.interface.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["finroot*", "interface*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
  "wave1: foundation tests",
  "integration: cross-module tests",
  "e2e: end-to-end tests",
  "golden: hand-graded reasoning quality tests",
]
